# projet_s4_revenant

./: .gitignore
projet_s4/: Cargo.toml  faces.db
projet_s4/src/: .main.rs.swp  data.txt  faces.db  main.rs
projet_s4/src/redim_image/: new
projet_s4/src/traitement_image/: convert_to_grey.rs  data_base.rs  dataset.rs  detect.rs  detect_extract_image.rs  detect_extract_webcam.rs  detect_image.rs  face_detection.rs  face_detection1.rs  faces.db  filtrage.rs  mod.rs  pca.rs  redim.rs  save_images.rs
projet_s4/ui/: appwindow.slint  appwindow2.slint
