[package]
name = "projet_s4"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
process_path = "0.1.3"
image="0.23.14"
ndarray="*"
ndarray-stats="*"
slint = "1.4"
opencv= "0.60.0"
rusqlite = "0.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
[build-dependencies]
slint-build = "1.4"

